# Catppuccinifier-Bot

./: .cursorrules  .gitignore  Cargo.toml  README.md
src/: commands.rs  image_processing.rs  main.rs  palette.rs  utils.rs
