# Cargo.toml
[package]
name = "catppuccin_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "standard_framework"] }
tokio = { version = "1.38", features = ["full"] } # Required for async operations
catppuccin = "2.5.1" # Corrected: The crate for color conversion is 'catppuccin', version 2.5.1
regex = "1.10" # For hex color validation
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] } # For image processing, enable common formats
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false } # For downloading images
dotenv = "0.15" # Add this line for .env file support
rayon = "1.10"
palette = "0.7" # For CIELAB color space calculations
lutgen = "0.3" # For LUT-based color mapping like the original catppuccinifier
chrono = { version = "0.4", features = ["serde"] } # For timestamp functionality
once_cell = "1.19" # For global static initialization
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
